--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 .mtj.tmp/
 
 # Package Files #
+target/
+
 *.jar
 *.war
 *.nar
@@ -22,3 +24,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+.idea/
