new empty project for planet polygot

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
   <modules>
     <module>ui</module>
     <module>backend</module>
+    <module>polygot</module>
   </modules>
   <profiles>
       <profile>
