--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,15 @@ nb-configuration.xml
 
 .idea/
 .vscode/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environment
+.venv/
+venv/
+
+#Distribution / packaging
+.Python
