polyglot code updated

--- a/AnomalyDetector/requirements.txt
+++ b/AnomalyDetector/requirements.txt
@@ -1,7 +1,8 @@
-pandas
-scikit-learn
-openpyxl
-xlrd
-pytest
-pytest-ordering
-setuptools
+joblib==1.5.2
+pandas==2.2.2
+numpy==2.2.4
+scikit-learn==1.7.2
+xlrd==2.0.2
+pytest==9.0.0
+pytest-ordering==0.6
+setuptools==80.9.0
