--- a/polyglot/pom.xml
+++ b/polyglot/pom.xml
@@ -9,7 +9,7 @@
     -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>polygot</artifactId>
+    <artifactId>polyglot</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <properties>
         <compiler-plugin.version>3.14.1</compiler-plugin.version>
