polyglot spelling corrected

--- a/polyglot/src/main/docker/Dockerfile.native-micro
+++ b/polyglot/src/main/docker/Dockerfile.native-micro
@@ -10,11 +10,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/polygot .
+# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/polyglot .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/polygot
+# docker run -i --rm -p 8080:8080 quarkus/polyglot
 #
 # The `quay.io/quarkus/ubi9-quarkus-micro-image:2.0` base image is based on UBI 9.
 # To use UBI 8, switch to `quay.io/quarkus/quarkus-micro-image:2.0`.
