--- a/polyglot/src/main/docker/Dockerfile.jvm
+++ b/polyglot/src/main/docker/Dockerfile.jvm
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.jvm -t quarkus/polygot-jvm .
+# docker build -f src/main/docker/Dockerfile.jvm -t quarkus/polyglot-jvm .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/polygot-jvm
+# docker run -i --rm -p 8080:8080 quarkus/polyglot-jvm
 #
 # If you want to include the debug port into your docker image
 # you will have to expose the debug port (default 5005 being the default) like this :  EXPOSE 8080 5005.
@@ -20,7 +20,7 @@
 #
 # Then run the container using :
 #
-# docker run -i --rm -p 8080:8080 quarkus/polygot-jvm
+# docker run -i --rm -p 8080:8080 quarkus/polyglot-jvm
 #
 # This image uses the `run-java.sh` script to run the application.
 # This scripts computes the command line to execute your Java application, and
