polyglot code now works on debian / ubuntu linux

--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,9 @@
   </properties>
 
   <modules>
-    <module>ui</module>
+    <module>polyglot</module>
     <module>backend</module>
+    <module>ui</module>
   </modules>
   <profiles>
       <profile>
