--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,9 +5,9 @@ quarkus.langchain4j.chat-model.provider=ollama
 quarkus.langchain4j.ollama.base-url=http://localhost:11434
 
 # Chat model
-quarkus.langchain4j.ollama.chat-model.model-id=smollm2:1.7b
-# quarkus.langchain4j.ollama.chat-model.model-name=qwen3:0.6b
+quarkus.langchain4j.ollama.chat-model.model-name=llama3.2:1b
 quarkus.langchain4j.ollama.chat-model.temperature=0.2
+quarkus.langchain4j.ollama.log-requests=true
 
 # Chat Memory
 quarkus.langchain4j.chat-memory.type=MESSAGE_WINDOW
@@ -22,3 +22,7 @@ quarkus.langchain4j.chat-memory.memory-window.max-messages=10
 
 # Smaller Token window for smollm2 family
 # quarkus.langchain4j.chat-memory.token-window.max-tokens=8000
+
+# MCP Toolbox Config
+quarkus.langchain4j.mcp.default.transport-type=http
+quarkus.langchain4j.mcp.default.url=http://localhost:9000/mcp/sse
