--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,5 +24,5 @@ quarkus.langchain4j.chat-memory.memory-window.max-messages=10
 # quarkus.langchain4j.chat-memory.token-window.max-tokens=8000
 
 # MCP Toolbox Config
-quarkus.langchain4j.mcp.default.transport-type=http
-quarkus.langchain4j.mcp.default.url=http://localhost:9000/mcp/sse
+# quarkus.langchain4j.mcp.default.transport-type=http
+# quarkus.langchain4j.mcp.default.url=http://localhost:9000/mcp/sse
