--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,5 +24,6 @@ quarkus.langchain4j.chat-memory.memory-window.max-messages=10
 # quarkus.langchain4j.chat-memory.token-window.max-tokens=8000
 
 # MCP Toolbox Config
+# Ensure that the MCP is running before turning enabling these settings
 # quarkus.langchain4j.mcp.default.transport-type=http
 # quarkus.langchain4j.mcp.default.url=http://localhost:9000/mcp/sse
