--- a/polyglot/pom.xml
+++ b/polyglot/pom.xml
@@ -71,6 +71,7 @@
     </dependencies>
 
     <build>
+        <finalName>polyglot</finalName>
         <plugins>
             <plugin>
                 <groupId>${quarkus.platform.group-id}</groupId>
@@ -142,6 +143,28 @@
                         <goals>
                             <goal>process-graalpy-resources</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <!--<version>3.4.0</version>-->
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>${project.build.directory}/${project.build.finalName}-runner.jar</file>
+                                    <type>jar</type>
+                                    <classifier>runner</classifier>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
